--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,5 @@
-<h1>Example App: Home</h1>
+<h1>Nelisa's App</h1>
+<a href = '/sold'> Products List </a></br>
+<a href = '/popular'> Most Popular Product </a></br>
+<a href = '/category'> Categories </a><br>
+<a href = '/mostPopularCategory'> Category </a><br>
