--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Example App</title>
+    <title>Nelisa App</title>
 </head>
 <body>
- <h1>JUst Chekin</h1>
+ <h1>Checking</h1>
     {{{body}}}
  
 </body>
