still in progress

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,4 +2,6 @@
 <a href = '/sold'> Products List </a></br>
 <a href = '/popular'> Most Popular Product </a></br>
 <a href = '/category'> Categories </a><br>
-<a href = '/mostPopularCategory'> Category </a><br>
+<a href = '/mostPopularCategory'> Most Popular Category </a></br>
+<a href = '/leastPopular'> Least Popular Product</a></br>
+<a href = '/leastPopularCategory'> Least Popular Category</a></br>
