still in progress

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,10 @@
-<h1>Nelisa's App</h1>
-<a href = '/sold'> Products List </a></br>
-<a href = '/popular'> Most Popular Product </a></br>
-<a href = '/category'> Categories </a><br>
-<a href = '/mostPopularCategory'> Most Popular Category </a></br>
-<a href = '/leastPopular'> Least Popular Product</a></br>
-<a href = '/leastPopularCategory'> Least Popular Category</a></br>
+<h1>Spaza shop reports</h1> 
+<ul id = 'navigation'>
+	<li><a href = '/'> Home </a></li>
+	<li><a href = '/sold'> Products List </a></li>
+	<li><a href = '/popular'> Most Popular Product </a></li>
+	<li><a href = '/category'> Categories </a></li>
+	<li><a href = '/mostPopularCategory'> Most Popular Category </a></li>
+	<li><a href = '/leastPopular'> Least Popular Product</a></li>
+	<li><a href = '/leastPopularCategory'> Least Popular Category</a></li>
+</ul>
