--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,8 +5,8 @@
     <title>Nelisa App</title>
 </head>
 <body>
- <h1>Checking</h1>
-    {{{body}}}
- 
+
+    {{{body}}}  
+    <a href = '/'> back-Home </a></br>
 </body>
 </html>
