--- a/views/leastPopularCategory.handlebars
+++ b/views/leastPopularCategory.handlebars
@@ -1,4 +1,12 @@
-<h1>Least Popular Category</h1>
+<h1>Least Popular Category</h1><table class = "table">
+	<tr>
+		<th>Product Name</th>
+        <th>Amount</th>
+	</tr>
 {{#each category}}
-	<h2>{{@key}} - {{this}}</h2>
+	<tr>
+	<td> {{@key}} </td> 
+	 <td> {{this}} </td>
+	</tr>
 {{/each}}
+</table>
