--- a/views/mostPopular.handlebars
+++ b/views/mostPopular.handlebars
@@ -1,9 +1,20 @@
 <h1>Most Popular Product</h1>
-<!--{{#product}}
-	<h2><h2> Product: {{prodName}}</h2>
-		<h2>Amt:{{amount}}</h2></h2>
-{{/product}}-->
-{{#each product}}
+<table class="table">
+	<tr>
+		<th>Product Name</th>
+		<th>Amount</th>
+	</tr>
+	{{#product}}
+		<tr>
+			<td>{{prodName}}</td>
+			<td>{{amount}}</td>
+		</tr>
+	{{/product}}
+                  
+</table>
+
+<!-- {{#each product}}
 	<h2>{{@key}} - {{this}}</h2>
 
 {{/each}}
+ -->
