--- a/views/mostPopularCategory.handlebars
+++ b/views/mostPopularCategory.handlebars
@@ -1,4 +1,13 @@
 <h1>Most Popular Category</h1>
+<table class = "table">
+	<tr>
+		<th>Category Name</th>
+        <th>Amount</th>
+	</tr>
 {{#each category}}
-	<h2>{{@key}} - {{this}}</h2>
+	<tr>
+	<td> {{@key}} </td> 
+	 <td> {{this}} </td>
+	</tr>
 {{/each}}
+</table>
