--- a/views/leastPopProd.handlebars
+++ b/views/leastPopProd.handlebars
@@ -1,9 +1,9 @@
 <h1>Least Popular Product</h1>
-<table class="table">
-	<tr>
+<table class>
+	<thead>
 		<th>Product Name</th>
 		<th>Amount</th>
-	</tr>
+	</thead>
 	{{#product}}
 		<tr>
 			<td>{{productName}}</td>
