--- a/views/ItemSold.handlebars
+++ b/views/ItemSold.handlebars
@@ -1,9 +1,9 @@
 <h1>Product List</h1>
-<table class="table">
-	<tr>
+<table class>
+	<thead>
         <th>Product Name</th>
-        <th>amount</th>
-	</tr>
+        <th>Amount</th>
+	</thead>
 	{{#each products}}
 		<tr>
 		
