--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,9 +1,9 @@
 <h1>Categories List</h1>
-<table class = "table">
-	<tr>
+<table class>
+	<thead>
 		<th>Category Name</th>
         <th>Amount</th>
-	</tr>
+	</thead>
 {{#each category}}
 	<tr>
 	 <td> {{@key}} </td> 
