--- a/views/mostPopularCategory.handlebars
+++ b/views/mostPopularCategory.handlebars
@@ -1,5 +1,5 @@
 <h1>Most Popular Category</h1>
-<table class = "table">
+<!-- <table class = "table">
 	<tr>
 		<th>Category Name</th>
         <th>Amount</th>
@@ -10,4 +10,17 @@
 	 <td> {{this}} </td>
 	</tr>
 {{/each}}
+</table> -->
+<table class>
+	<thead>
+		<th>Category Name</th>
+		<th>Amount</th>
+	</thead>
+	{{#category}}
+		<tr>
+			<td>{{categoryName}}</td>
+			<td>{{amount}}</td>
+		</tr>
+	{{/category}}
+                  
 </table>
