--- a/views/ItemSold.handlebars
+++ b/views/ItemSold.handlebars
@@ -1,5 +1,6 @@
 <h1>Product List</h1>
-<table class>
+<div class = "container">
+<table class= "col-xs-12">
 	<thead>
         <th>Product Name</th>
         <th>Amount</th>
@@ -13,3 +14,4 @@
 		</tr>
 	{{/each}}
 </table>
+</div>
