--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,22 +1,1 @@
-<h1></h1>
-<!-- <div class = 'dropdown'>
-	<ul class = 'nav'>
-		<li><a href = '/'> Home </a></li>
-		<li><a href = '/'> Products </a>
-			<ul class = 'subs'>
-				<li><a href = '/sold'> Products List </a></li>
-				<li><a href = '/popular'> Most Popular Product </a></li>
-				<li><a href = '/leastPopularCategory'> Least Popular Category</a></li>
-			</ul>
-		</li>
-		<li><a href = '/'> Categories </a>
-			<ul class = 'subs'>
-				<li><a href = '/category'> Categories List </a></li>
-				<li><a href = '/mostPopularCategory'> Most Popular Category </a></li>
-				<li><a href = '/leastPopular'> Least Popular Product</a></li>
-			</ul>
-		</li>	
-	</ul>
-</div>
- -->
-
+<h1 class = "text-center jumbotron">Welcome to the Spaza App</h1>
