--- a/views/leastPopProd.handlebars
+++ b/views/leastPopProd.handlebars
@@ -1,5 +1,6 @@
 <h1>Least Popular Product</h1>
-<table class>
+<div class = "container">
+<table class="col-xs-12">
 	<thead>
 		<th>Product Name</th>
 		<th>Amount</th>
@@ -12,3 +13,4 @@
 	{{/product}}
                   
 </table>
+</div>
