--- a/views/mostPopular.handlebars
+++ b/views/mostPopular.handlebars
@@ -1,5 +1,6 @@
 <h1>Most Popular Product</h1>
-<table class>
+<div class = "container">
+<table class = "col-xs-12">
 	<thead>
 		<th>Product Name</th>
 		<th>Amount</th>
@@ -12,7 +13,7 @@
 	{{/product}}
                   
 </table>
-
+</div>
 <!-- {{#each product}}
 	<h2>{{@key}} - {{this}}</h2>
 
