--- a/views/mostPopularCategory.handlebars
+++ b/views/mostPopularCategory.handlebars
@@ -1,17 +1,6 @@
 <h1>Most Popular Category</h1>
-<!-- <table class = "table">
-	<tr>
-		<th>Category Name</th>
-        <th>Amount</th>
-	</tr>
-{{#each category}}
-	<tr>
-	<td> {{@key}} </td> 
-	 <td> {{this}} </td>
-	</tr>
-{{/each}}
-</table> -->
-<table class>
+<div class = "container">
+<table class="col-xs-12">
 	<thead>
 		<th>Category Name</th>
 		<th>Amount</th>
@@ -24,3 +13,16 @@
 	{{/category}}
                   
 </table>
+</div>
+<!-- <table class = "table">
+	<tr>
+		<th>Category Name</th>
+        <th>Amount</th>
+	</tr>
+{{#each category}}
+	<tr>
+	<td> {{@key}} </td> 
+	 <td> {{this}} </td>
+	</tr>
+{{/each}}
+</table> -->
