--- a/views/category.handlebars
+++ b/views/category.handlebars
@@ -1,5 +1,6 @@
 <h1>Categories List</h1>
-<table class>
+<div class = "container">
+<table class= "col-xs-12">
 	<thead>
 		<th>Category Name</th>
         <th>Amount</th>
@@ -11,3 +12,4 @@
 	</tr>
 {{/each}}
 </table>
+</div>
