--- a/views/leastPopularCategory.handlebars
+++ b/views/leastPopularCategory.handlebars
@@ -1,16 +1,6 @@
 <h1>Least Popular Category</h1>
-	<!-- <tr>
-		<th>Category Name</th>
-        <th>Amount</th>
-	</tr>
-{{#each category}}
-	<tr>
-	<td> {{@key}} </td> 
-	 <td> {{this}} </td>
-	</tr>
-{{/each}}
-</table> -->
-<table class>
+<div class = "container">
+<table class="col-xs-12">
 	<thead>
 		<th>Category Name</th>
 		<th>Amount</th>
@@ -23,3 +13,15 @@
 	{{/category}}
                   
 </table>
+</div>
+	<!-- <tr>
+		<th>Category Name</th>
+        <th>Amount</th>
+	</tr>
+{{#each category}}
+	<tr>
+	<td> {{@key}} </td> 
+	 <td> {{this}} </td>
+	</tr>
+{{/each}}
+</table> -->
