--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -36,7 +36,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/sold"> Products List</a></li>
+                <li><a href="/products"> Products List</a></li>
                 <li><a href="/popular"> Most Popular Product</a></li>
                 <li><a href="/leastPopular"> Least Popular Product</a></li>
                 </ul>
@@ -48,6 +48,15 @@
                 <li><a href="/mostPopularCategory"> Most Popular Category </a></li>
                 <li><a href="/leastPopularCategory"> Least Popular Category</a></li>
           </ul>
+          </li>
+          <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sales <span class="caret"></span></a>  
+              <ul class="dropdown-menu">
+                <li><a href="/category"> Sales Data</a></li>
+                <!-- <li><a href="/mostPopularCategory"> Most Popular Category </a></li>
+                <li><a href="/leastPopularCategory"> Least Popular Category</a></li> -->
+          </ul>
+          </li>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
