--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -52,7 +52,7 @@
           <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sales <span class="caret"></span></a>  
               <ul class="dropdown-menu">
-                <li><a href="/category"> Sales Data</a></li>
+                <li><a href="/sales"> Sales Data</a></li>
                 <!-- <li><a href="/mostPopularCategory"> Most Popular Category </a></li>
                 <li><a href="/leastPopularCategory"> Least Popular Category</a></li> -->
           </ul>
