--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,34 +28,37 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Spaza Shop</a>
+          <!-- <a class="navbar-brand" href="/">Spaza Shop</a> -->
+          <li class = "text-centre">
+            <img class = "img-responsive" src = "image/logo1.png/>
+           </li> 
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tables <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/products"> Products List</a></li>
-                <li><a href="/popular"> Most Popular Product</a></li>
-                <li><a href="/leastPopular"> Least Popular Product</a></li>
-                </ul>
+                <li><a href="/products"> Products </a></li>
+                <li><a href="/sales"> Sales </a></li>
+                <li><a href="/"> Categories</a></li>
+                <li><a href="/"> Purchases</a></li>
+                <li><a href="/"> Suppliers</a></li>
+              </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>  
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Popularity <span class="caret"></span></a>  
               <ul class="dropdown-menu">
-                <li><a href="/category"> Categories List</a></li>
-                <li><a href="/mostPopularCategory"> Most Popular Category </a></li>
-                <li><a href="/leastPopularCategory"> Least Popular Category</a></li>
-          </ul>
+                <li><a href="/category"> Product popularity</a></li>
+                <li><a href="/mostPopularCategory"> Category popularity </a></li>
+                </ul>
           </li>
           <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sales <span class="caret"></span></a>  
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Earnings <span class="caret"></span></a>  
               <ul class="dropdown-menu">
-                <li><a href="/sales"> Sales Data</a></li>
-                <!-- <li><a href="/mostPopularCategory"> Most Popular Category </a></li>
-                <li><a href="/leastPopularCategory"> Least Popular Category</a></li> -->
-          </ul>
+                <li><a href="/sales"> Product earnings</a></li>
+                <li><a href="/mostPopularCategory"> Category earnings </a></li>
+                </ul>
           </li>
         </div><!--/.nav-collapse -->
       </div>
