--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,7 @@ body{
 	
 }
 
-table{
+/*table{
 	width:50%;
 	border-collapse: separate;
 	border:1px solid black;
@@ -12,4 +12,4 @@ table{
 
 td {
 	border:1px solid black;
-}
+}*/
