--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -1,22 +1,8 @@
-<h1>Sales</h1>
-<h1>Add Sales</h1>
+<h1>Sales Records</h1>
 
-<form action="/sales/addSales" method="POST">
-	Date : <input type="date" name="date" value="{{date}}">
-	Quantity Sold : <input type="number" name="qty" value="{{qty}}">
-	Sales Price :<input type="number" name="sales_price" value="{{sales_price}}">
-		
-		<select name="category_id">
-			{{#sales}}
-			<option value="{{product_id}}">{{product_name}}</option>
-			{{/sales}}
-		</select>
-	
-	<input type="submit">
-</form>
-
-<a href="/products/add">Add sales</a>
+<a href="/sales/add">Add sale</a>
 {{#sales}}
+  <h2>{{sales_id}}</h2>
   <h2>{{product_name}}</h2>
   <h2>{{sales_price}}</h2>
   <h2>{{qty}}</h2>
