--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,12 +4,6 @@ body{
 	
 }
 
-/*table{
-	width:50%;
-	border-collapse: separate;
-	border:1px solid black;
+#logo {
+	height: 150%;
 }
-
-td {
-	border:1px solid black;
-}*/
