--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,10 +28,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- <a class="navbar-brand" href="/">Spaza Shop</a> -->
-          <li class = "text-centre">
-            <img class = "img-responsive" src = "image/logo1.png/>
-           </li> 
+           <a class="navbar-brand" href="/"><img id="logo" src = "./img/logo1.png"/></a> 
+            
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
