--- a/views/Products.handlebars
+++ b/views/Products.handlebars
@@ -1,12 +1,26 @@
 <h1>Product List</h1>
 
 <a href="/products/add">Add product</a>
-{{#products}}
-  <h2>{{product_name}}</h2>
-  <a href="/products/edit/{{product_id}}">Edit</a>
-  <a href="/products/delete/{{product_id}}">Delete</a>
-{{/products}}
 
-{{#no_products}}
-  <p>No products available yet. Add some above.</p>
-{{/no_products}}
+<table class ="table" id = "productList">
+	<tr>
+		<th>Product id</th>
+		<th>Product name</th>
+		<th>Category name</th>
+	</tr>
+	{{#products}}
+		<tr>
+			<td>{{product_id}}</td>
+			<td>{{product_name}}</td>
+			<td>{{category_name}}</td>
+	
+			<td><a href="/products/edit/{{product_id}}">Edit</a></td>
+			<td><a href="/products/delete/{{product_id}}">Delete</a></td>
+		</tr>
+	{{/products}}
+
+</table>
+
+
+
+
