--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -1,16 +1,26 @@
 <h1>Sales Records</h1>
 
 <a href="/sales/add">Add sale</a>
-{{#sales}}
-  <h2>{{sales_id}}</h2>
-  <h2>{{product_name}}</h2>
-  <h2>{{sales_price}}</h2>
-  <h2>{{qty}}</h2>
-  <h2>{{date}}</h2>
-  <a href="/sales/edit/{{sales_id}}">Edit</a>
-  <a href="/sales/delete/{{sales_id}}">Delete</a>
-{{/sales}}
 
-{{#no_sales}}
-  <p>No sales available yet. Add some above.</p>
-{{/no_sales}}
+<table class="table" id = "salesRecords">
+	<tr>
+		<th>Sales id</th>
+		<th>Product name</th>
+		<th>Sales price</th>
+		<th>Quantity</th>
+		<th>Date</th>
+	</tr>
+	{{#sales}}
+		<tr>
+			
+			<td>{{sales_id}}</td>
+			<td>{{product_name}}</td>
+			<td>{{sales_price}}</td>
+			<td>{{qty}}</td>
+			<td>{{date}}</td>
+
+			<td><a href="/sales/edit/{{sales_id}}">Edit</a></td>
+			<td><a href="/sales/delete/{{sales_id}}">Delete</a></td>
+		</tr>
+	{{/sales}}
+</table>
