--- a/views/addProducts.handlebars
+++ b/views/addProducts.handlebars
@@ -1,6 +1,6 @@
 <h1>Add a new product</h1>
-<br />
-<form action="/products/add" method="POST">
+
+<br /><form action="/products/add" method="POST">
 	Enter product name: <br /> <input type="text" name="product_name" value="{{product_name}}"><br />
 	<br />Category selection:<br />
 		<select name="category_id">
