--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-           <a class="navbar-brand" href="/"><img id="logo" src = "./img/logo1.png"/></a> 
+           <a class="navbar-brand" href="/"><img id="logo" src = "/img/logo1.png"/></a> 
             
         </div>
         <div id="navbar" class="navbar-collapse collapse">
