added product popularity

--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -19,7 +19,7 @@
 			<td>{{qty}}</td>
 			<td>{{date}}</td>
 
-			<td><a href="/sales/edit/{{sales_id}}">Edit</a></td>
+			<td><a href="/sales/editSales/{{sales_id}}">Edit</a></td>
 			<td><a href="/sales/delete/{{sales_id}}">Delete</a></td>
 		</tr>
 	{{/sales}}
