--- a/views/editSales.handlebars
+++ b/views/editSales.handlebars
@@ -1,8 +1,22 @@
-<h1>Edit</h1>
+<h1>Sales record update</h1>
 
-{{#data}}
+<!-- {{#data}}
 <form action="/sales/updateSales/{{sales_id}}" method="POST">
 	Description: <input type="text" name="product_name" value="{{product_name}}">	
 	<input type="submit">
 </form>
-{{/data}}
+{{/data}} -->
+
+<br /><form action="/sales/editSales/{{sales_id}}" method="POST">
+		  Date :<br /> <input type="date" name="date" value="{{date}}"><br />
+	<br />Quantity Sold :<br /> <input type="number" name="qty" value="{{qty}}"><br />
+	<br />Sales Price :<br /><input type="number" name="sales_price" value="{{sales_price}}"><br />
+	<br />Product selection:<br />
+		<select name="product_id">
+			{{#products}}
+			<option value="{{product_id}}">{{product_name}}</option>
+			{{/products}}
+		</select><br />
+	
+	<br /><input type="submit"><br />
+</form>
