--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,7 +47,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Popularity <span class="caret"></span></a>  
               <ul class="dropdown-menu">
-                <li><a href="/category"> Product popularity</a></li>
+                <li><a href="/products/productPopularity"> Product popularity</a></li>
                 <li><a href="/mostPopularCategory"> Category popularity </a></li>
                 </ul>
           </li>
