--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -39,7 +39,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/products"> Products </a></li>
                 <li><a href="/sales"> Sales </a></li>
-                <li><a href="/"> Categories</a></li>
+                <li><a href="/categories"> Categories</a></li>
                 <li><a href="/"> Purchases</a></li>
                 <li><a href="/"> Suppliers</a></li>
               </ul>
