--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,7 +48,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Popularity <span class="caret"></span></a>  
               <ul class="dropdown-menu">
                 <li><a href="/products/productPopularity"> Product popularity</a></li>
-                <li><a href="/mostPopularCategory"> Category popularity </a></li>
+                <li><a href="/categories/categoriesPopularity"> Category popularity </a></li>
                 </ul>
           </li>
           <li class="dropdown">
