--- a/views/Categories.handlebars
+++ b/views/Categories.handlebars
@@ -12,7 +12,7 @@
 			<th>{{category_id}}</th>
 			<th>{{category_name}}</th>
 		
-		<td><a href="/categories/edit/{{category_id}}">Edit</a></td>
+		<td><a href="/categories/editCategories/{{category_id}}">Edit</a></td>
 		<td><a href="/categories/delete/{{category_id}}">Delete</a></td>
 		</tr>
 	{{/categories}}
