--- a/views/Categories.handlebars
+++ b/views/Categories.handlebars
@@ -9,8 +9,8 @@
 	</tr>
 	{{#categories}}
 		<tr>
-			<th>{{category_id}}</th>
-			<th>{{category_name}}</th>
+			<td>{{category_id}}</td>
+			<td>{{category_name}}</td>
 		
 		<td><a href="/categories/editCategories/{{category_id}}">Edit</a></td>
 		<td><a href="/categories/delete/{{category_id}}">Delete</a></td>
