--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,7 +41,7 @@
                 <li><a href="/sales"> Sales </a></li>
                 <li><a href="/categories"> Categories</a></li>
                 <li><a href="/"> Purchases</a></li>
-                <li><a href="/"> Suppliers</a></li>
+                <li><a href="/suppliers"> Suppliers</a></li>
               </ul>
             </li>
             <li class="dropdown">
