added the purchases table

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,7 +40,7 @@
                 <li><a href="/products"> Products </a></li>
                 <li><a href="/sales"> Sales </a></li>
                 <li><a href="/categories"> Categories</a></li>
-                <li><a href="/"> Purchases</a></li>
+                <li><a href="/purchases"> Purchases</a></li>
                 <li><a href="/suppliers"> Suppliers</a></li>
               </ul>
             </li>
