fixed edit products

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,1 +1,1 @@
-<h1 class = "text-center jumbotron">Welcome to the Nelisa's Spaza Shop</h1>
+<h1 class = "text-center jumbotron">Welcome to Nelisa's Spaza Shop</h1>
