--- a/views/editSales.handlebars
+++ b/views/editSales.handlebars
@@ -1,5 +1,5 @@
 <h1>Sales record update</h1>
-
+{{#data}}
 <br /><form action="/sales/editSales/{{sales_id}}" method="POST">
 		  Date :<br /> <input type="date" name="date" value="{{date}}"><br />
 	<br />Quantity Sold :<br /> <input type="number" name="qty" value="{{qty}}"><br />
@@ -13,3 +13,4 @@
 	
 	<br /><input type="submit"><br />
 </form>
+{{/data}}
