--- a/views/addSales.handlebars
+++ b/views/addSales.handlebars
@@ -1,4 +1,4 @@
-<h1>Add a sale</h1>
+<!-- <h1>Add a sale</h1>
 
 <br /><form action="/sales/add" method="POST">
 		  Date :<br /> <input type="date" name="date" value="{{date}}"><br />
@@ -13,3 +13,44 @@
 	
 	<br /><input type="submit"><br />
 </form>
+ -->
+<h1>Add a sale</h1>
+
+<form action="/sales/add" method="POST" class="form-horizontal" >
+
+	<div class="form-group">
+		<label for="date" class="control-label col-xs-2">Date</label>
+			<div class="col-xs-5">	 
+     			<input type="date" class="form-control" name="date" value="{{date}}" placeholder="yyyy-mm-dd" required/>
+			</div>
+	</div> 
+     
+	<div class="form-group">
+		<label for="Amount" class="control-label col-xs-2">Qauntity sold</label>	 
+		 <div class="col-xs-5">
+			<input type="number" name="qty" value="{{qty}}" class="form-control" placeholder="Enter Sales Amount" required>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="number" class="control-label col-xs-2">Sales price</label>
+		<div class="col-xs-5">	 
+     			<input type="number" step="any" name="sales_price" value="{{sales_price}}" placeholder="Enter Sales Price" required>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="control-label col-xs-2">Product selection</label>
+		<div class="col-xs-5">	 
+     			<select name="product_id">
+    				{{#each products}}
+      					<option value = "{{product_id}}">{{product_name}}</option>
+    				{{/each}}
+  			</select>
+		</div>
+	</div>
+
+ 	<input type="submit" class="btn btn-primary" id="enter" onclick="myFunction()">  
+</form>
+
+		
