--- a/views/Sales.handlebars
+++ b/views/Sales.handlebars
@@ -1,26 +1,44 @@
 <h1>Sales Records</h1>
 
-<a href="/sales/add">Add sale</a>
-
-<table class="table" id = "salesRecords">
-	<tr>
-		<th>Sales id</th>
-		<th>Product name</th>
-		<th>Sales price</th>
-		<th>Quantity</th>
-		<th>Date</th>
-	</tr>
-	{{#sales}}
-		<tr>
+<div class = "container-fluid">
+	<div class = "row">
+		<div class = "col-xs-12">
 			
-			<td>{{sales_id}}</td>
-			<td>{{product_name}}</td>
-			<td>{{sales_price}}</td>
-			<td>{{qty}}</td>
-			<td>{{date}}</td>
+			<a href="/sales/add"  class= "btn btn-primary">
+			<span class= "glyphicon glyphicon-plus"></span>Add sale</a>
 
-			<td><a href="/sales/editSales/{{sales_id}}">Edit</a></td>
-			<td><a href="/sales/delete/{{sales_id}}">Delete</a></td>
-		</tr>
-	{{/sales}}
-</table>
+			<div class = "table-responsive">
+				<table class="table" id = "salesRecords">
+					<thead>
+						<tr>
+							<th>Sales id</th>
+							<th>Product name</th>
+							<th>Sales price</th>
+							<th>Quantity</th>
+							<th>Date</th>
+						</tr>
+					</thead>
+					{{#sales}}
+						<tr>
+							
+							<td>{{sales_id}}</td>
+							<td>{{product_name}}</td>
+							<td>{{sales_price}}</td>
+							<td>{{qty}}</td>
+							<td>{{date}}</td>
+
+							<td><a href="/sales/editSales/{{sales_id}}" class="btn btn-primary">
+							<span class="glyphicon glyphicon-edit"></span>Edit</a></td>
+							
+							<td><a href="/sales/delete/{{sales_id}}" class= "btn btn-primary">
+							<span class="glyphicon glyphicon-trash"></span>Delete</a></td>
+
+						</tr>
+					{{/sales}}
+				</table>
+			</div>
+		</div>
+	</div>
+</div>
+
+					
