--- a/views/addPurchases.handlebars
+++ b/views/addPurchases.handlebars
@@ -1,8 +1,8 @@
-<h1>Add a purchase</h1>
+<!-- <h1>Add a purchase</h1>
 
 <br /><form action="/purchases/addPurchases" method="POST">
 		  Date :<br /> <input type="date" name="date" value="{{date}}"><br />
-	<br />Quantity Sold :<br /> <input type="number" name="qty" value="{{qty}}"><br />
+	<br />Quantity :<br /> <input type="number" name="qty" value="{{qty}}"><br />
 	<br />Cost Price :<br /><input type="number" name="cost_price" value="{{cost_price}}"><br />
 	<br />Product selection:<br />
 		<select name="product_id">
@@ -18,4 +18,56 @@
 		</select><br />
 	
 	<br /><input type="submit"><br />
+</form> -->
+
+<h1>Add a purchase</h1>
+
+<form action="/purchases/addPurchases" method="POST" class="form-horizontal" >
+
+	<div class="form-group">
+		<label for="date" class="control-label col-xs-2">Date</label>
+		<div class="col-xs-5">	 
+     			<input type="date" class="form-control" name="date" value="{{date}}" placeholder="yyyy-mm-dd" required/>
+		</div>
+	</div> 
+     
+	<div class="form-group">
+		<label for="Amount" class="control-label col-xs-2">Qauntity</label>	 
+		<div class="col-xs-5">
+			<input type="number" name="qty" value="{{qty}}" class="form-control" placeholder="Enter Amount" required>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="number" class="control-label col-xs-2">Cost price</label>
+		<div class="col-xs-5">	 
+     			<input type="number" step="any" name="cost_price" value="{{cost_price}}" placeholder="Enter Price" required>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="control-label col-xs-2">Product selection</label>
+		<div class="col-xs-5">	 
+     		<select name="product_id">
+    			{{#each products}}
+      				<option value = "{{product_id}}">{{product_name}}</option>
+    			{{/each}}
+  			</select>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="control-label col-xs-2">Supplier selection</label>
+		<div class="col-xs-5">	 
+     		<select name="supplier_id">
+    			{{#each suppliers}}
+      				<option value = "{{supplier_id}}">{{supplier_name}}</option>
+    			{{/each}}
+  			</select>
+		</div>
+	</div>
+
+
+
+ 	<input type="submit" class="btn btn-primary" id="enter" onclick="myFunction()">  
 </form>
