--- a/views/editPurchases.handlebars
+++ b/views/editPurchases.handlebars
@@ -1,7 +1,7 @@
-<h1>Edit Purchases</h1>
+<!-- <h1>Edit Purchases</h1>
 
 {{#data}}
-<br /><form action="/purchases/editPurchases/{{purchase_id}}" method="POST">
+<br /><form action="/purchases/updatePurchases/{{purchase_id}}" method="POST">
 		  Date :<br /> <input type="date" name="date" value="{{date}}"><br />
 	<br />Quantity :<br /> <input type="number" name="qty" value="{{qty}}"><br />
 	<br />Cost Price :<br /><input type="number" name="cost_price" value="{{cost_price}}"><br />
@@ -20,4 +20,59 @@
 		</select><br />
 	
 	<br /><input type="submit"><br />
+</form> -->
+
+<h1>Edit purchases</h1>
+ {{#data}}
+
+<form action="/purchases/updatePurchases/{{purchase_id}}" method = "POST" class="form-horizontal" >
+
+	<div class="form-group">
+		<label for="date" class="control-label col-xs-2">Date</label>
+			<div class="col-xs-5">	 
+     				<input type="date" class="form-control" name="date" placeholder="yyyy-mm-dd" required/>
+			</div>
+	</div> 
+
+	<div class="form-group">
+		<label for="number" class="control-label col-xs-2">Qauntity</label>	 
+		 <div class="col-xs-5">
+			<input type="number" name="qty" class="form-control" placeholder="Enter Amount" required>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label for="number" class="control-label col-xs-2">Cost price</label>
+		<div class="col-xs-5">	 
+     			<input type="number" step="any" name="cost_price" placeholder="Enter cost Price" required>
+		</div>
+	</div>
+
+{{/data}}
+    <div class="form-group">
+		<label class="control-label col-xs-2">Product selection</label>
+		<div class="col-xs-5">	 
+     		<select name="product_id">
+    			{{#products}}
+      				<option value ="{{product_id}}">{{product_name}}</option>
+    			{{/products}}
+  			</select>
+		</div>
+	</div>
+
+	<div class="form-group">
+		<label class="control-label col-xs-2">Supplier selection</label>
+		<div class="col-xs-5">	 
+     		<select name="supplier_id">
+    			{{#suppliers}}
+      				<option value ="{{supplier_id}}">{{supplier_name}}</option>
+    			{{/suppliers}}
+  			</select>
+		</div>
+	</div>
+
+
+
+ 	<input type="submit" class="btn btn-primary" id="enter" onclick="myFunction()">  
+
 </form>
