--- a/views/editSales.handlebars
+++ b/views/editSales.handlebars
@@ -33,7 +33,7 @@
 	<div class="form-group">
 		<label for="number" class="control-label col-xs-2">Qauntity sold</label>	 
 		 <div class="col-xs-5">
-			<input type="number" name="qty" class="form-control" placeholder="Enter Sales Amount" required>
+			<input type="number" name="qty" class="form-control" placeholder="Enter Sales Amount" value="{{qty}}">
 		</div>
 	</div>
 
