--- a/views/editCategories.handlebars
+++ b/views/editCategories.handlebars
@@ -17,7 +17,7 @@
 	<div class="form-group">
 		<label for="number" class="control-label col-xs-2">Category Name</label>
 		<div class="col-xs-5">	 
-     			<input type="text" step="any" name="category_name" placeholder="Enter category name" required>
+     			<input type="text" step="any" name="category_name" value="{{category_name}}">
 		</div>
 	</div>
 {{/data}}
