--- a/views/editSales.handlebars
+++ b/views/editSales.handlebars
@@ -26,39 +26,36 @@
 	<div class="form-group">
 		<label for="date" class="control-label col-xs-2">Date</label>
 			<div class="col-xs-5">	 
-     				<input type="date" class="form-control" name="date" placeholder="yyyy-mm-dd" required/>
+     			<input type="date" class="form-control" name="date"  value="{{date}}">
 			</div>
 	</div> 
 
 	<div class="form-group">
 		<label for="number" class="control-label col-xs-2">Qauntity sold</label>	 
 		 <div class="col-xs-5">
-			<input type="number" name="qty" class="form-control" placeholder="Enter Sales Amount" value="{{qty}}">
+			<input type="number" name="qty" class="form-control"  value="{{qty}}">
 		</div>
 	</div>
-
 
 	<div class="form-group">
 		<label for="number" class="control-label col-xs-2">Sales price</label>
 		<div class="col-xs-5">	 
-     			<input type="number" step="any" name="sales_price" placeholder="Enter Sales Price" required>
+     		<input type="number" step="any" name="sales_price" value="{{sales_price}}">
 		</div>
 	</div>
-
 {{/data}}
-    <div class="form-group">
-		<label class="control-label col-xs-2">Product selection</label>
-		<div class="col-xs-5">	 
-     			<select name="product_id">
-    				{{#products}}
-      					<option value ="{{product_id}}">{{product_name}}</option>
-    				{{/products}}
-  				</select>
-		</div>
 
+<div class="form-group">
+	<label class="control-label col-xs-2">Product selection</label>
+	<div class="col-xs-5">	 
+     	<select name="product_id">
+    		{{#products}}
+      			<option value ="{{product_id}}">{{product_name}}</option>
+    		{{/products}}
+  		</select>
 	</div>
+</div>
 
 
  	<input type="submit" class="btn btn-primary" id="enter" onclick="myFunction()">  
-
 </form>
