fixed table data and created product earnings handlebars

--- a/views/categoriesPopularity.handlebars
+++ b/views/categoriesPopularity.handlebars
@@ -14,8 +14,8 @@
 				</thead>
 				{{#categoriesPopularity}}
 					<tr>
-						<th>{{category_name}}</th>
-						<th>{{qty}}</th>
+						<td>{{category_name}}</td>
+						<td>{{qty}}</td>
 					</tr>
 				{{/categoriesPopularity}}
 				</table>
