--- a/views/productPopularity.handlebars
+++ b/views/productPopularity.handlebars
@@ -13,8 +13,8 @@
 			  </thead>
 				{{#productPopularity}}
 					<tr>
-						<th>{{product_name}}</th>
-						<th>{{qty}}</th>
+						<td>{{product_name}}</td>
+						<td>{{qty}}</td>
 					</tr>
 				{{/productPopularity}}
 				</table>
