--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    
+
     <title>Nelisa's Spaza Shop </title>
 
     <!-- Bootstrap Core CSS -->
-   
+
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <link href="/css/main.css" rel="stylesheet">
@@ -28,8 +28,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-           <a class="navbar-brand" href="/"><img id="logo" src = "/img/logo1.png"/></a> 
-            
+           <a class="navbar-brand" href="/"><img id="logo" src = "/img/logo1.png"/></a>
+
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -45,24 +45,24 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Popularity <span class="caret"></span></a>  
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Popularity <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li><a href="/products/productPopularity"> Product popularity</a></li>
                 <li><a href="/categories/categoriesPopularity"> Category popularity </a></li>
                 </ul>
           </li>
           <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Earnings <span class="caret"></span></a>  
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profits and Earnings <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="/sales"> Product earnings</a></li>
-                <li><a href="/mostPopularCategory"> Category earnings </a></li>
+                <li><a href="/products/productEarnings"> Product earnings</a></li>
+                <li><a href="/categories/categoryEarnings"> Category earnings </a></li>
                 </ul>
           </li>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    {{{body}}} 
+    {{{body}}}
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 
