added data to product earnings table

--- a/views/productEarnings.handlebars
+++ b/views/productEarnings.handlebars
@@ -11,6 +11,12 @@
               <th>Earnings</th>
             </tr>
           </thead>
+          {{#productEarnings}}
+            <tr>
+              <td>{{product_name}}</td>
+              <td>R{{earnings}}</td>
+            </tr>
+        {{/productEarnings}}
         </table>
       </div>
     </div>
