created category earnings table

--- a/views/categoryEarnings.handlebars
+++ b/views/categoryEarnings.handlebars
@@ -11,12 +11,12 @@
               <th>Earnings</th>
             </tr>
           </thead>
-          <!-- {{#categoryEarnings}}
+          {{#categoryEarnings}}
             <tr>
               <td>{{category_name}}</td>
               <td>R{{earnings}}</td>
             </tr>
-        {{/categoryEarnings}} -->
+        {{/categoryEarnings}}
         </table>
       </div>
     </div>
