--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,6 +56,7 @@
               <ul class="dropdown-menu">
                 <li><a href="/products/productEarnings"> Product earnings</a></li>
                 <li><a href="/categories/categoryEarnings"> Category earnings </a></li>
+                <li><a href="/products/productProfits"> Product profits </a></li>
                 </ul>
           </li>
         </div><!--/.nav-collapse -->
