--- a/views/productProfits.handlebars
+++ b/views/productProfits.handlebars
@@ -11,12 +11,12 @@
               <th>Profits</th>
             </tr>
           </thead>
-          <!-- {{#productProfits}}
+          {{#productProfits}}
             <tr>
               <td>{{product_name}}</td>
-              <td>R{{profits}}</td>
+              <!-- <td>R{{profits}}</td> -->
             </tr>
-        {{/productProfits}} -->
+        {{/productProfits}}
         </table>
       </div>
     </div>
