added product profits

--- a/views/productProfits.handlebars
+++ b/views/productProfits.handlebars
@@ -14,9 +14,9 @@
           {{#productProfits}}
             <tr>
               <td>{{product_name}}</td>
-              <!-- <td>R{{profits}}</td> -->
+             <td>R{{Profit}}</td>
             </tr>
-        {{/productProfits}}
+         {{/productProfits}}
         </table>
       </div>
     </div>
