added the profits per category

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -57,7 +57,8 @@
                 <li><a href="/products/productEarnings"> Product earnings</a></li>
                 <li><a href="/categories/categoryEarnings"> Category earnings </a></li>
                 <li><a href="/products/productProfits"> Product profits </a></li>
-                </ul>
+                <li><a href="/categories/categoryProfits"> Category profits </a></li>
+              </ul>
           </li>
         </div><!--/.nav-collapse -->
       </div>
