added supplier name to most popular and most profitable products

--- a/views/categoryProfits.handlebars
+++ b/views/categoryProfits.handlebars
@@ -8,13 +8,15 @@
           <thead>
             <tr>
               <th>Category Name</th>
+              <th>Supplier Name</th>
               <th>Profits</th>
             </tr>
           </thead>
           {{#categoryProfits}}
             <tr>
               <td>{{category_name}}</td>
-             <td>R{{profit}}</td>
+              <td>{{supplier_name}}</td>
+              <td>R{{profit}}</td>
             </tr>
          {{/categoryProfits}}
         </table>
