--- a/views/productProfits.handlebars
+++ b/views/productProfits.handlebars
@@ -8,13 +8,15 @@
           <thead>
             <tr>
               <th>Product Name</th>
+              <th>Supplier Name</th>
               <th>Profits</th>
             </tr>
           </thead>
           {{#productProfits}}
             <tr>
               <td>{{product_name}}</td>
-             <td>R{{Profit}}</td>
+              <td>{{supplier_name}}</td>
+              <td>R{{Profit}}</td>
             </tr>
          {{/productProfits}}
         </table>
