--- a/views/productPopularity.handlebars
+++ b/views/productPopularity.handlebars
@@ -7,13 +7,15 @@
 				<table class = "table" id = "productPopularity">
 				<thead>
 					<tr>
-						<th>Product name</th>
+						<th>Product Name</th>
+						<th>Supplier Name</th>
 						<th>Quantity</th>
 					</tr>
 			  </thead>
 				{{#productPopularity}}
 					<tr>
 						<td>{{product_name}}</td>
+						<td>{{supplier_name}}</td>
 						<td>{{qty}}</td>
 					</tr>
 				{{/productPopularity}}
