--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -23,7 +23,7 @@
   <div class="form">
     <form class="register-form">
       <input type="text" class="form-control" autocomplete="off" name="username" placeholder="name"/>
-      <input type="password" name="password" cass="form-control" placeholder="password"/>
+      <input type="password" name="password" class="form-control" placeholder="password"/>
       <input type="password" name="password_confirm" class="form-control" placeholder="re-type password"/>
       <button>create</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
